# fasthelp

./: LICENSE  README.md  ReleaseCycle.md  __init__.py  fasthelp.py  setup.py
ai/: notmadeyet.py
fasthelp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fasthelp_1_0_10/: README.md  fasthelp.py  setup.py
fasthelp_1_0_10/fasthelp.egg-info/: PKG-INFO  requires.txt
fasthelp_1_0_11/: README.md  fasthelp.py  setup.py
fasthelp_1_0_11/fasthelp.egg-info/: PKG-INFO  SOURCES.txt
fasthelp_1_0_14/: README.md  fasthelp.py  setup.py
fasthelp_1_0_14/fasthelp.egg-info/: PKG-INFO  SOURCES.txt
fasthelp_1_0_15/: License.md  README.md  fasthelp.py  pyproject.toml  setup.cfg  setup.py
fasthelp_1_0_15/fasthelp.egg-info/: PKG-INFO
fasthelp_1_0_18/: README.md  fasthelp.py  pyproject.toml  setup.cfg
fasthelp_1_0_18/fasthelp.egg-info/: PKG-INFO
fasthelp_1_0_26/: README.md  fasthelp.py  pyproject.toml  setup.cfg
fasthelp_1_0_26/fasthelp.egg-info/: PKG-INFO
fasthelp_1_0_27/: README.md  fasthelp.py  pyproject.toml  setup.cfg  setup.py
fasthelp_1_0_27/fasthelp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fasthelp_1_0_30/: README.md  fasthelp.py  pyproject.toml  setup.cfg
fasthelp_1_0_30/fasthelp.egg-info/: PKG-INFO  top_level.txt
fasthelp_1_1_0/: README.md  fasthelp.py  setup.cfg
fasthelp_1_1_0/fasthelp.egg-info/: PKG-INFO  requires.txt  top_level.txt
fasthelp_1_1_3/: README.md  fasthelp.py  setup.cfg
fasthelp_1_1_3/fasthelp.egg-info/: PKG-INFO
fasthelp_1_1_6/: README.md  fasthelp.py  gpuinfo.py  setup.cfg
fasthelp_1_1_6/docs/: docs.md
fasthelp_1_1_6/fasthelp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fasthelp_1_1_8/: README.md  fasthelp.py  setup.cfg  setup.py
fasthelp_1_1_8/fasthelp.egg-info/: PKG-INFO
files/: create.py
ide/: err.py
imports/: __init__.py
languages/: __init__.py  error.py
opers/: __init__.py  log_ops.py
strings/: __init__.py  opers.py
system/: all_is_os.py  gpuinfo.py
utils/: __init__.py
