[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasthelp"
version = "1.0.30"
description = "An Useful Python Helper"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ziyan Zhou", email = "unknownuserfrommars@protonmail.com"},
]
maintainers = [
    {name = "Unknownuserfrommars", email = "unknownuserfrommars@protonmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.urls]
"Homepage" = "https://www.github.com/Unknownuserfrommars/fasthelp"
