[metadata]
name = fasthelp
version = 1.0.30
description = An Useful Python Helper
long_description = file: README.md
long_description_content_type = text/markdown
author = Ziyan Zhou
author_email = unknownuserfrommars@protonmail.com
maintainer = Unknownuserfrommars
maintainer_email = unknownuserfrommars@protonmail.com
url = https://www.github.com/Unknownuserfrommars/fasthelp
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = fasthelp
python_requires = >=3.9
install_requires =
    numpy>=1.26
    pandas>=2.2

[options.extras_require]
dev =
    pytest
    black