[metadata]
name = fasthelp
version = 1.1.6
description = An Useful Python Helper that Bundles some functions (And added some new ones!)
long_description = file: README.md
long_description_content_type = text/markdown
author = Ziyan Zhou
author_email = unknownuserfrommars@protonmail.com
maintainer = Unknownuserfrommars
maintainer_email = unknownuserfrommars@protonmail.com
url = https://www.github.com/Unknownuserfrommars/fasthelp
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    numpy>=1.26
    pandas>=2.2
    openai >= 1.51
    python-docx >= 1.1.0
    python-pptx >= 1.0.0
    distro >= 1.9.0
    psutil >= 6.0.0
    packageimporter >= 1.4.0
py_modules = fasthelp, gpuinfo

[options.package_data]
* = gpuinfo.py
